# ultimate-dictionary-api

./: .gitignore  README.md  app.sh  delete_all_data.sh  download_wiktionaries.sh  execute_in_background.sh  install_deps.sh  pom.xml  restart_postgres.sh  start_psql.sh
bruno/dictionarycreator/: Get many items.bru  Get translation.bru  Random item.bru  bruno.json
ebook_dictionary_creator/: app.py  pyproject.toml  requirements.txt
ebook_dictionary_creator/ebook_dictionary_creator/: add_wordfreq_to_db.py  app.py
helper/: codepoints.py  find_words_where_form_of_has_multiple_elements.py
sql/: delete_all.sql  get_data_for_dictionary.sql  update all with zipf.sql  zipf.sql
src/main/java/com/pux12/dictionarycreator/: DictionarycreatorApplication.java  SpringJdbcConfig.java  TODO.txt  WiktextractDownloader.java  WiktionarySchemaDownloader.java  test.json  test2.json  test3.json
src/main/java/com/pux12/dictionarycreator/controller/: DictionaryController.java
src/main/java/com/pux12/dictionarycreator/model/: Etymology.java  (+7 more)
src/main/java/com/pux12/ultimatedictionaryapi/: TODO.md  TODO.txt  UltimateDictionaryApplication.java
src/main/resources/: application.properties  custom.properties
src/main/resources/jdbc/: data.sql  schema.sql
src/main/resources/wiktionary/: combined.json  de.json  es.json  fr.json  ru.json  zh.json
src/test/java/com/pux12/dictionarycreator/: DictionarycreatorApplicationTests.java
src/test/java/com/pux12/ultimatedictionaryapi/: DictionarycreatorApplicationTests.java
wordfreq-server/: pyproject.toml
wordfreq-server/wordfreq_server/: app.py  fastapi_rps_tester.py  set_frequency_in_database.py
(+37 files in other folders)
