[tool.poetry]
name = "wordfreq-server"
version = "0.1.0"
description = ""
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
wordfreq = "^3.1.1"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
